--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -375,6 +375,6 @@
   publisher    = { Internet Crime Complaint Center},
   date      = {2011},
   title     = {2010 Internet Crime Report},
-  location  = {https://pdf.ic3.gov/2010_IC3Report.pdf},
+  location  = {https://pdf.ic3.gov/2010\_IC3Report.pdf},
   langid    = {english}
 }
