--- a/diplomka-text/fi-pdflatex.tex
+++ b/diplomka-text/fi-pdflatex.tex
@@ -144,12 +144,12 @@ counterfeits, running Ponzi schemes) and also enables many new types of frauds l
 
 Publicly available statistics prove that cybercriminals are much
  less likely to be discovered and persecuted, than criminals operating offline.
- In the USA in 2010, there were 5628 robberies and the loot was recovered in more than 20 \% of cases. \parencite{fbi10} 
- In the same year, FBI recieved 303809 complaints related to cyber crime, resulting in just 6 convictions. \parencite{fbcyber} 
+ In the USA in 2010, there were 5628 robberies and the loot was recovered in more than 20 \% of cases. \cite{fbi10} 
+ In the same year, FBI recieved 303809 complaints related to cyber crime, resulting in just 6 convictions. \cite{fbcyber} 
 Criminals value their anonymity very highly and use various means to prevent being caught by police forces.
-\parencite{tzanetakis2016transparency}
-\parencite{van2013surfing}
-\parencite{aldridge2014not}
+\cite{tzanetakis2016transparency}
+\cite{van2013surfing}
+\cite{aldridge2014not}
 
 A big problem for criminals was getting the money obtained from criminal activity into their possession,
 as it required some form of physical presence or identification.
@@ -166,7 +166,7 @@ However, all bitcoin transactions are publicly available and so each bitcoin can
  Cryptomarkets are accessible via Tor network as an .onion service, and the users of
  cryptomarkets use PGP to communicate with each other and use bitcoin as a way to transfer value.
 These mechanisms make it possible for cryptomarkets to publicly operate, yet still be hard to reach by the law enforcement.
-\parencite{cox2016staying}
+\cite{cox2016staying}
 
 We scraped and examined data from the Valhalla market,
  to our best knowledge one of the currently most popular and well established operating drug markets (February 2018),
@@ -231,7 +231,7 @@ so that drug market administrators cannot eavesdrop on that communication.
 
 \section{Cryptomarkets}
 
-Illegal online markets have been around for more than 30 years \parencite{motoyama2011analysis}.
+Illegal online markets have been around for more than 30 years \cite{motoyama2011analysis}.
 On these markets, users can sell and buy drugs, weapons, hacking tools, stolen credit cards,
 counterfeit currency, forged documents and other illegal goods and services.
 Most markets forbid selling the most unambiguously harmful goods, such as child pornography or hitman services.
@@ -243,17 +243,17 @@ than previous markets hosted on forums and chatrooms.
 
 Physical products, like drugs, are sent to a buyer via ordinary mail to the address provided by the buyer.
 The package is disguised as packages containing common goods sent by big online retailers.
-\parencite{paquet2017cryptomarkets}
+\cite{paquet2017cryptomarkets}
 
 Cryptomarkets are popular with vendors,
-as they offer them a high influx of customers and secure and anonymous environment for conducting their bussiness \parencite{van2014responsible}.
+as they offer them a high influx of customers and secure and anonymous environment for conducting their bussiness \cite{van2014responsible}.
 Cryptomarkets offer safer, more comfortable and more professional way of buying drugs, avoiding 
-the need to meet face to face with dealers \parencite{barratt2014use}.
+the need to meet face to face with dealers \cite{barratt2014use}.
 
 Nowadays multiple cryptomarkets exist, competing against one another. The risk
-of a failure of a deal is still high \parencite{wehinger2011dark}.
+of a failure of a deal is still high \cite{wehinger2011dark}.
 In order to protect buyers, cryptomarkets use Escrow and vendors' feedback to identify scammers and minimize losses.
-Silkroad cryptomarket used tumbler services \parencite{ron2014did},
+Silkroad cryptomarket used tumbler services \cite{ron2014did},
 which made it harder to analyze bitcoin transaction graph. Valhalla cryptomarket claims that they
 users can withdraw bitcoin from them using bitcoin tumbler too.
 
@@ -323,7 +323,7 @@ This allows us to detect the most profitable and popular listings.
 
 \subsection{Vendor's feedback}
 
-Cryptomarkets usually employ reputation systems \parencite{resnick2000reputation},
+Cryptomarkets usually employ reputation systems \cite{resnick2000reputation},
 where buyers can share their satisfaction with vendors.
 These systems are similar to systems used in popular e-commerce websites like Amazon or Ebay.
 Users can give feedback only to vendors they have traded with.
@@ -333,12 +333,12 @@ like the easiness of communication,
 the speed of sending the goods and unsuspiciousness of packaging.
 
 Feedback is not mandatory, but vendors encourage buyers to give them positive feedback
-\parencite{aldridge2014not}\parencite{soska2015measuring}, because the positive feedback
+\cite{aldridge2014not}\cite{soska2015measuring}, because the positive feedback
 ratio gives the vendor a significant advantage over vendors with worse feedback.
 
 \section{Bitcoin and blockchain}
 
-Bitcoin \parencite{nakamoto2008bitcoin} is the first decentralized peer to peer cryptocurrency,
+Bitcoin \cite{nakamoto2008bitcoin} is the first decentralized peer to peer cryptocurrency,
 created by the anonymous author(s) known by pseudonym Satoshi Nakamoto in 2008.
 Bitcoin transactions are not verified by central authority, they are processed by distributed peer to peer network of bitcoin nodes instead. 
 The source code of bitcoin nodes is an open source and can be downloaded and run locally. 
@@ -474,7 +474,7 @@ This might identify other addresses belonging to the owner of the address we alr
 Bitcoin Tumblers exist in order to prevent, or at least obstruct such analysis.
 A user sends bitcoins to the tumbler service and the service mixes his bitcoins
 with other users' bitcoins by performing multiple transactions
-between its bitcoin addresses. \parencite{moser2013inquiry}
+between its bitcoin addresses. \cite{moser2013inquiry}
   
 The structure of these transactions differs for different tumbler services.
 The user sends their bitcoins to an address owned by the tumbler,
@@ -498,7 +498,7 @@ If the attacker has control over the transmission from the start of communicatio
 The HTTPS protocol encrypts data, but doesn't hide the identity of the user from the web server.
 The internet provider can also see, where is the user connecting. Tor aims to solve these issues.
  
-Tor \parencite{dingledine2004tor} is a free open source software that provides access to Tor network. Tor network is a network of Tor nodes.
+Tor \cite{dingledine2004tor} is a free open source software that provides access to Tor network. Tor network is a network of Tor nodes.
 The goal of the Tor project is to provide its users encrypted access to the Internet in order to prevent third parties
 from eavesdropping and analysing the transmitted data.
 While the Tor usage itself can be detected by a third party, the third party can not decrypt user's data that are transmitted
@@ -539,7 +539,7 @@ by behavioural and statistical analysis.
     \centering
     \includegraphics[width=1\textwidth]{tor-packet}
     \caption{Tor packed encryption schem}
-    \label{Tor packed encryption schema}
+    \label{tor-packet}
 \end{figure}
  
 Cryptomarkets are running as hidden services on TOR network.
@@ -569,7 +569,7 @@ Randezvous-point just acts as a relay between two Tor circuits.
 
 \section{PGP}
 
-PGP \parencite{Zimmermann:1995:OPU:202735} is a program for encrypting data
+PGP \cite{Zimmermann:1995:OPU:202735} is a program for encrypting data
 and communication between two parties using public key cryptography.
 PGP is used for signing, encrypting and decrypting messages, mostly e-mails.
 PGP was developed in 1991 as an open source, with the intention 
@@ -596,7 +596,7 @@ It is heavily encouraged for users of blockchain to use multiple bitcoin address
  and every major bitcoin wallet (=software for receiving and sending bitcoins) does so.
  It is therefore useful to detect addresses belonging to the same user.
  
-The authors of the first research article \parencite{reid2013analysis}
+The authors of the first research article \cite{reid2013analysis}
  parsed blockchain files to create a graph of bitcoin transactions, with vertices as transactions
  and edges between them representing bitcoins flowing from one transaction to another.
  They created so-called user graph by clustering addresses belonging to the same user, using
@@ -605,8 +605,8 @@ was published in 2011 and dealt with a much smaller number of people using bitco
 Their analysis also focuses on deanonymization through multiple aspects of bitcoin protocol,
 while this thesis focuses on deanonymization from transaction graph and public data.
 
-Androulaky \parencite{androulaki2013evaluating} performed clustering using two heuristics.
-The first one is the same as \parencite{reid2013analysis} did - all inputs of transaction
+Androulaky \cite{androulaki2013evaluating} performed clustering using two heuristics.
+The first one is the same as \cite{reid2013analysis} did - all inputs of transaction
 belonged to the same user. The second heuristics is clustering some outputs of the transaction with its inputs.
 Most transactions have two outputs, one is owned by the transaction recipient,
 the other one (the aforementioned change output) is owned by
@@ -619,23 +619,23 @@ They also employed multiple clustering techniques based on the behaviour of user
  They tested the success of their clustering techniques in their simulated bitcoin 
  environment.
 
-Advanced and similar work was done by \parencite{spagnuolo2014bitiodine}. They downloaded the blockchain, transformed it to
+Advanced and similar work was done by \cite{spagnuolo2014bitiodine}. They downloaded the blockchain, transformed it to
  a database and performed clustering to get a graph of transactions between users.
 Then they developed a tool for scraping data from multiple locations (Bitcointalk and bitcoin-OTC forum) to link
 off-chain data and identities to bitcoin addresses.
 They tested the tool on few popular transactions related to the seizure of Silkroad marketplace.
 
-Similar work to this thesis was done by \parencite{fleder2015bitcoin}.
+Similar work to this thesis was done by \cite{fleder2015bitcoin}.
 This paper use data from Bitcointalk, the most popular bitcoin forum. 
 They apply a simple algorithm to group multiple bitcoin addresses belonging to one user together.
 Then they use the scraped data to show
 that some of the Bitcointalk users were using Silkroad marketplace or other popular services accepting bitcoin.
  
-Ron and Shamir \parencite{ron2013quantitative} focus on bringing
+Ron and Shamir \cite{ron2013quantitative} focus on bringing
 interesting statistics about bitcoin transaction graph
 and provide a detailed analysis of really big bitcoin movements (more than 5000 BTC) 
 through transactions in the network.
-In their other study \parencite{ron2014did}, they analyzed transactions performed by Ross Ulbricht,
+In their other study \cite{ron2014did}, they analyzed transactions performed by Ross Ulbricht,
 who was the administrator of Silkroad marketplace.
 The FBI published their bitcoin address, which they used to collect all seized bitcoins from Ross Ulbricht.
 They took the size and frequency of transactions related to the seized bitcoins prior to the seizure and compared it to the estimated income of Silkroad. They found discrepancies between the 
@@ -643,11 +643,11 @@ relatively stable income of Silkroad marketplace and unstable balances in bitcoi
 that were seized by FBI. They conclude that FBI seized around 22\% of Ross Ulbrich bitcoins
 and found addresses possessing some of these bitcoins, that have not been used since Ross' arrest.
 
-In contrast to previously mentioned papers, Meiklejohn \parencite{meiklejohn2013fistful} 
+In contrast to previously mentioned papers, Meiklejohn \cite{meiklejohn2013fistful} 
 don't only passively scan the blockchain, they actively send bitcoins to addresses of
 well-known services to track their bitcoins in the following transactions executed by the service.
 They also used the same two heuristics for clustering addresses
-as Androulaki. \parencite{androulaki2013evaluating}
+as Androulaki. \cite{androulaki2013evaluating}
 They concluded that the network does not offer enough anonymity and large transactions can be traced.
 
 All of the previously mentioned works had to deal with much smaller transaction graph,
@@ -664,31 +664,31 @@ Emerging cryptomarkets brought the attention of the scientific community
 and lots of articles have been published related to the phenomenon of drug trafficking via the Internet.
 Most of these papers were investigating the topic from the social
 and criminology perspective, performing qualitative analysis.
-\parencite{aldridge2014not}
-\parencite{barratt2014use}
-\parencite{christin2013traveling}
-\parencite{dolliver2015criminogenic}
-\parencite{van2013silk}
-\parencite{walsh2011drugs}
-\parencite{martin2014lost}
+\cite{aldridge2014not}
+\cite{barratt2014use}
+\cite{christin2013traveling}
+\cite{dolliver2015criminogenic}
+\cite{van2013silk}
+\cite{walsh2011drugs}
+\cite{martin2014lost}
 
 There are only a few articles focusing on statistically describing fully operating drug market and its vendors
 by collecting and analyzing data from a cryptomarket webpage. Short description of works like that follows.
-Aldridge \parencite{aldridge2017delivery} scraped Silkroad in September 2013, the most popular cryptomarket of that time.
+Aldridge \cite{aldridge2017delivery} scraped Silkroad in September 2013, the most popular cryptomarket of that time.
 He focuses on how the vendors and buyers perceive the risk of arrest and attempt to downsize it.
 He concludes that users of cryptomarket are aware of the risks both related to their physical and online activity
 and actively reduce their risk.
 
-Decary \parencite{decary2017repeat} focuses on investigating, how loyal the buyers on cryptomarkets are to their vendors. As it seems, popular vendors successfully build their loyal customer base. These findings make sense, given the natural health risks related to using drugs,
+Decary \cite{decary2017repeat} focuses on investigating, how loyal the buyers on cryptomarkets are to their vendors. As it seems, popular vendors successfully build their loyal customer base. These findings make sense, given the natural health risks related to using drugs,
 customers prefer vendors with high reputation and trust.
 
-Broseus \parencite{broseus2016studying} restricted his research to vendors shipping from Canada
+Broseus \cite{broseus2016studying} restricted his research to vendors shipping from Canada
 and tracked their activity through multiple markets. His findings conclude, that the same vendors
 use the same usernames and sometimes PGP keys on multiple marketplaces because reputation
 is highly valued in these cryptomarkets, therefore vendors try to keep it when moving to the new marketplace.
 Also by his findings, some vendors are highly specialized in selling one category of drugs, while others offer a wide range of drugs.
 
-Article by Doliver \parencite{dolliver2016characteristics} is most similar to this work.
+Article by Doliver \cite{dolliver2016characteristics} is most similar to this work.
 They scraped and analyzed two popular cryptomarkets, Agora and Evolution, and quantitatively assessed
 the characteristics of vendors from both markets, focusing on the difference
  between different markets' vendor populations.
@@ -882,7 +882,7 @@ bitcoin core and other bitcoin wallet software. Unique deposit address for each
 account on Valhalla market is required for each user, so that system can associate
 bitcoin transaction with Valhalla market account.
 In order to solve this issue, we used two heuristics that were widely used
-in previous works \parencite{androulaki2013evaluating}\parencite{reid2013analysis}
+in previous works \cite{androulaki2013evaluating}\cite{reid2013analysis}
 for clustering bitcoin addresses belonging to same user.
 
 The first heuristic simply states that all inputs of one transaction belong to same user. This is logical,
@@ -896,7 +896,7 @@ When one transaction has two outputs with two different addresses, we assume, th
 address and is owned by the sender.
 We than search through the the blockchain for the first occurence of each address of the outputs of the 
 transaction. If one of the output addresses had been used before the transaction and second not,
-than we can safely assume, that the second one is change address\parencite{androulaki2013evaluating}.
+than we can safely assume, that the second one is change address\cite{androulaki2013evaluating}.
 Schema of the second heuristic is on figure \ref{heur2}.
 
 \begin{figure}[!htb]
@@ -914,7 +914,7 @@ Schema of the second heuristic is on figure \ref{heur2}.
 \end{figure}
 
 Both of these heuristics are pretty strict and have just a negligible chance of falsely merging
-addresses not belonging to the same user\parencite{androulaki2013evaluating}.
+addresses not belonging to the same user\cite{androulaki2013evaluating}.
 There exist multisignature wallets and also few proposals for anonymization methods that could make
 these heuristics missleading(like CoinJoin mixer and dark wallet) 
 , but these contribute to negligible percentage of transactions.
@@ -1001,7 +1001,7 @@ Script \emph{listing-scraper.sh} goes through Valhalla listings and download the
 Script \emph{listing-parser.py} process the downloaded pages and generates file \emph{listings.csv} with informations about listings.
 \emph{Seller-scraper.py} opens \emph{listings.csv} and downloads HTML source of vendors' profile pages. 
 \emph{Seller-parser.py} proccess downloader vendor's profile pages and generates \emph{sellers.csv} and \emph{feedbacks.csv}.
-The variables and data types stored in these csv files are described in chapter \label{Valhalla cryptomarket webscraping}
+The variables and data types stored in these csv files are described in chapter \ref{Valhalla cryptomarket webscraping}
 in tables \ref{datalist}, \ref{datavendor} and \ref{datafeedback}. We used these generated csv files for
 bringing statistics about Valhalla cryptomarket in the last chapter.
 
@@ -1205,7 +1205,6 @@ The figure \ref{listingxprice} shows distribution of prices of all listings in
 these listings are somehow special except the price.
 
 \begin{figure}[!htb]
-\label{listingxprice}
 \subfloat{
 \label{listingxprice}
     \centering
@@ -1311,8 +1310,8 @@ The distribution of buyers total spending is on figure \ref{buyerxspend}.
 
 \begin{figure}[!htb]
 \hspace*{-3cm}
-    \label{buyerxspend}
 \subfloat{
+\label{buyerxspend}
     \centering
     \includegraphics[scale=0.4]{buyerxspend}
     %\caption{Rounded amount the buyers totally spent on Valhalla market}
@@ -1350,7 +1349,7 @@ Perpetual depositing and withdrawals over prolonged period of time seems financi
 and might lead to disclosing majority of cryptomarkets addresses and transaction.
 
 Application could be extended by adding more heuristics for clustering addresses. Some of these
-heuristics have been described in \parencite{androulaki2013evaluating}.
+heuristics have been described in \cite{androulaki2013evaluating}.
 These heuristics are not based just on graph of bitcoin transactions, but also
 on expected behaviour of users and data that can be obtained by continously running one or multiple
 bitcoin nodes. These heuristics are less reliable, but offer more options to cluster addresses of same owner.
@@ -1364,7 +1363,7 @@ For setting the application up on server and having users access it remotely,
 different options viable for storing and retrieving data on server hardware
 (for example in memory database if RAM is big enough can be considered.
 
-\printbibliography{}
+%\printbibliography{}
 
 
 \end{document}
